--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng-click-outside": "^9.0.1",
     "plotly.js-dist-min": "^2.8.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
